feat(DATA-1218): add stop tts name handling